# grasql

./: .gitignore  Cargo.toml  README.md  architecture.md  devbox.json  mix.exs  package.json  renovate.json  simple_resolver.ex.bak
bench/: grasql_bench.exs
config/: config.exs  dev.exs  test.exs
docs/: architecture.md  benchmarks.md  qst.md
docs/samples/: 01-simple-query.md  02-query-with-arguments.md  03-basic-relationship.md  04-basic-filtering.md  05-nested-filtering.md  06-pagination.md  07-sorting.md  08-basic-aggregation.md  09-aggregation-with-nodes.md  10-nested-aggregation.md  11-distinct-queries.md  12-complex-boolean-logic.md  13-many-to-many-relationship.md  14-complex-combined-query.md  15-insert-mutation.md  16-batch-insert-mutation.md  17-update-mutation.md  18-batch-update-mutation.md  19-delete-mutation.md  20-batch-delete-mutation.md
lib/: grasql.ex
lib/grasql/: application.ex  config.ex  (+6 more)
native/grasql/: Cargo.toml
native/grasql/benches/: parser_benchmark.rs
native/grasql/src/: atoms.rs  cache.rs  config.rs  encoder.rs  extraction.rs  interning.rs  lib.rs  nif.rs  parser.rs  sql.rs  types.rs
native/grasql/src/parser/: ast_converter.rs  error.rs  mod.rs  schema_extractor.rs  variable_processor.rs
native/grasql/src/parser/tests/: ast_converter_test.rs  integration_test.rs  mod.rs  schema_extractor_test.rs  variable_processor_test.rs
native/grasql/tests/: cache_tests.rs  document_tests.rs  fuzz_tests.proptest-regressions  fuzz_tests.rs  mutation_tests.rs  parser_tests.rs  samples_tests.rs
test/: grasql_test.exs  test_helper.exs
(+41 files in other folders)
