[package]
name = "grasql"
version = "0.1.0"
edition = "2021"

[lib]
name = "grasql"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.36.1"
graphql-query = "1.0.0"
serde_json = "1.0"
anyhow = "1.0"
bumpalo = "3.14"
dashmap = "6.1.0"
once_cell = "1.17.1"
xxhash-rust = { version = "0.8.6", features = ["xxh3"] }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "parser_benchmark"
harness = false
